--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -19,4 +19,9 @@ jobs:
         run: sed -i '/version/d' ./composer.json
 
       - name: Install Hyva
-        run: docker exec magento-project-community-edition ./retry "composer require hyva-themes/magento2-compat-module hyva-themes/magento2-default-theme hyva-themes/magento2-hyva-checkout && \ bin/magento setup:upgrade && \ magerun2 config:store:set design/theme/theme_id 3 --scope=default --scope-id=0 && \ magerun2 config:store:set design/theme/theme_id 5 --scope=stores --scope-id=1 && \ bin/magento config:set general/region/display_all 0 && \ bin/magento config:set hyva_themes_checkout/general/checkout default"
+        run: |
+          docker exec magento-project-community-edition ./retry "composer config repositories.hyva-themes/magento2-theme-module git git@gitlab.hyva.io:hyva-themes/magento2-theme-module.git && composer config repositories.hyva-themes/magento2-reset-theme git git@gitlab.hyva.io:hyva-themes/magento2-reset-theme.git && composer config repositories.hyva-themes/magento2-email-module git git@gitlab.hyva.io:hyva-themes/magento2-email-module.git && composer config repositories.hyva-themes/magento2-default-theme git git@gitlab.hyva.io:hyva-themes/magento2-default-theme.git && composer config repositories.hyva-themes/hyva-checkout git git@gitlab.hyva.io:hyva-checkout/checkout.git"
+          docker exec magento-project-community-edition ./retry "composer require hyva-themes/magento2-default-theme hyva-themes/magento2-hyva-checkout"
+          docker exec magento-project-community-edition ./retry "bin/magento setup:upgrade"
+          docker exec magento-project-community-edition ./retry "magerun2 config:store:set design/theme/theme_id 3 --scope=default --scope-id=0 && magerun2 config:store:set design/theme/theme_id 5 --scope=stores --scope-id=1"
+          docker exec magento-project-community-edition ./retry "bin/magento config:set general/region/display_all 0 && bin/magento config:set hyva_themes_checkout/general/checkout default"
