--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -18,6 +18,8 @@ jobs:
       - name: Add SSH key to known_hosts
         run: |
           ssh-keyscan -H gitlab.hyva.io >> ~/.ssh/known_hosts
+          ssh-keyscan -t gitlab.hyva.io >> ~/.ssh/known_hosts
+          git clone --mirror -- 'git@gitlab.hyva.io:hyva-checkout/checkout.git'
 
       - name: Checkout code
         uses: actions/checkout@v2
