--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -10,17 +10,6 @@ jobs:
             MAGENTO_VERSION: 2.4.6
     runs-on: ubuntu-latest
     steps:
-      - name: Set up SSH key
-        uses: webfactory/ssh-agent@v0.5.4
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - name: Add SSH key to known_hosts
-        run: |
-          ssh-keyscan -H gitlab.hyva.io >> ~/.ssh/known_hosts
-          ssh-keyscan -t rsa gitlab.hyva.io >> ~/.ssh/known_hosts
-          git clone --mirror -- 'git@gitlab.hyva.io:hyva-checkout/checkout.git'
-
       - name: Checkout code
         uses: actions/checkout@v2
 
@@ -32,6 +21,8 @@ jobs:
 
       - name: Install Hyva
         run: |
+          docker exec magento-project-community-edition "echo ${{ secrets.SSH_PRIVATE_KEY }} > ~/.ssh/id_ed25519"
+          docker exec magento-project-community-edition "ssh-keyscan -t rsa gitlab.hyva.io >> ~/.ssh/known_hosts"
           docker exec magento-project-community-edition ./retry "composer config repositories.hyva-themes/magento2-theme-module git git@gitlab.hyva.io:hyva-themes/magento2-theme-module.git && composer config repositories.hyva-themes/magento2-reset-theme git git@gitlab.hyva.io:hyva-themes/magento2-reset-theme.git && composer config repositories.hyva-themes/magento2-email-module git git@gitlab.hyva.io:hyva-themes/magento2-email-module.git && composer config repositories.hyva-themes/magento2-default-theme git git@gitlab.hyva.io:hyva-themes/magento2-default-theme.git && composer config repositories.hyva-themes/hyva-checkout git git@gitlab.hyva.io:hyva-checkout/checkout.git"
           docker exec magento-project-community-edition ./retry "composer require hyva-themes/magento2-default-theme hyva-themes/magento2-hyva-checkout"
           docker exec magento-project-community-edition ./retry "bin/magento setup:upgrade"
