--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Install Hyva
         run: |
           docker exec magento-project-community-edition sh -c "mkdir -p ~/.ssh/ && echo \"${{ secrets.SSH_PRIVATE_KEY }}\" > ~/.ssh/id_ed25519"
+          docker exec magento-project-community-edition sh -c "chmod 700 ~/.ssh && chmod 600 ~/.ssh/id_ed25519"
           docker exec magento-project-community-edition sh -c "ssh-keyscan -t rsa gitlab.hyva.io >> ~/.ssh/known_hosts"
           docker exec magento-project-community-edition ./retry "composer config repositories.hyva-themes/magento2-theme-module git git@gitlab.hyva.io:hyva-themes/magento2-theme-module.git && composer config repositories.hyva-themes/magento2-reset-theme git git@gitlab.hyva.io:hyva-themes/magento2-reset-theme.git && composer config repositories.hyva-themes/magento2-email-module git git@gitlab.hyva.io:hyva-themes/magento2-email-module.git && composer config repositories.hyva-themes/magento2-default-theme git git@gitlab.hyva.io:hyva-themes/magento2-default-theme.git && composer config repositories.hyva-themes/hyva-checkout git git@gitlab.hyva.io:hyva-checkout/checkout.git"
           docker exec magento-project-community-edition ./retry "composer require hyva-themes/magento2-default-theme hyva-themes/magento2-hyva-checkout"
