--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -24,11 +24,11 @@ jobs:
           docker exec magento-project-community-edition sh -c "mkdir -p ~/.ssh/ && echo \"${{ secrets.SSH_PRIVATE_KEY }}\" > ~/.ssh/id_ed25519"
           docker exec magento-project-community-edition sh -c "chmod 700 ~/.ssh && chmod 600 ~/.ssh/id_ed25519"
           docker exec magento-project-community-edition sh -c "ssh-keyscan -t rsa gitlab.hyva.io >> ~/.ssh/known_hosts"
-          docker exec magento-project-community-edition ./retry "composer config repositories.hyva-themes/magento2-theme-module git git@gitlab.hyva.io:hyva-themes/magento2-theme-module.git && composer config repositories.hyva-themes/magento2-reset-theme git git@gitlab.hyva.io:hyva-themes/magento2-reset-theme.git && composer config repositories.hyva-themes/magento2-email-module git git@gitlab.hyva.io:hyva-themes/magento2-email-module.git && composer config repositories.hyva-themes/magento2-default-theme git git@gitlab.hyva.io:hyva-themes/magento2-default-theme.git && composer config repositories.hyva-themes/hyva-checkout git git@gitlab.hyva.io:hyva-checkout/checkout.git"
-          docker exec magento-project-community-edition ./retry "composer require hyva-themes/magento2-default-theme hyva-themes/magento2-hyva-checkout"
+          docker exec magento-project-community-edition ./retry "composer config repositories.hyva-themes/magento2-theme-module git git@gitlab.hyva.io:hyva-themes/magento2-theme-module.git && composer config repositories.hyva-themes/magento2-reset-theme git git@gitlab.hyva.io:hyva-themes/magento2-reset-theme.git && composer config repositories.hyva-themes/magento2-email-module git git@gitlab.hyva.io:hyva-themes/magento2-email-module.git && composer config repositories.hyva-themes/magento2-default-theme git git@gitlab.hyva.io:hyva-themes/magento2-default-theme.git && composer config repositories.hyva-themes"
+          
           docker exec magento-project-community-edition ./retry "bin/magento setup:upgrade"
           docker exec magento-project-community-edition ./retry "magerun2 config:store:set design/theme/theme_id 3 --scope=default --scope-id=0 && magerun2 config:store:set design/theme/theme_id 5 --scope=stores --scope-id=1"
-          docker exec magento-project-community-edition ./retry "bin/magento config:set general/region/display_all 0 && bin/magento config:set hyva_themes_checkout/general/checkout default"
+          docker exec magento-project-community-edition ./retry "bin/magento config:set general/region/display_all 0"
 
       - name: Upload the code into the docker container
         run: |
