--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Upload the code into the docker container
         run: |
           docker cp $(pwd) magento-project-community-edition:/data/extensions/
-          docker exec magento-project-community-edition ./install-composer-package magewirephp/magewire:@dev magewirephp/magewire-examples
+          docker exec composer require magewirephp/magewire:"@dev as 1.99.0" magewirephp/magewire-examples
 
       - name: Check webserver
         run: curl -vvv http://localhost
