--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -32,8 +32,9 @@ jobs:
 
       - name: Upload the code into the docker container
         run: |
+          git checkout -b github-actions-tmp
           docker cp $(pwd) magento-project-community-edition:/data/extensions/
-          docker exec magento-project-community-edition ./install-composer-package "magewirephp/magewire:@dev as 1.99.0" magewirephp/magewire-examples
+          docker exec magento-project-community-edition ./install-composer-package "magewirephp/magewire:dev-github-actions-tmp as 1.99.0" magewirephp/magewire-examples
 
       - name: Check webserver
         run: curl -vvv http://localhost
