--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Start Docker
-        run: docker run --detach --name magento-project-community-edition michielgerritsen/magento-project-community-edition:${{ matrix.PHP_VERSION }}-magento${{ matrix.MAGENTO_VERSION }}
+        run: docker run --detach -p 8080:80 --name magento-project-community-edition michielgerritsen/magento-project-community-edition:${{ matrix.PHP_VERSION }}-magento${{ matrix.MAGENTO_VERSION }}
 
       - name: Remove version from composer.json
         run: sed -i '/version/d' ./composer.json
@@ -37,4 +37,4 @@ jobs:
           docker exec magento-project-community-edition ./install-composer-package "magewirephp/magewire:dev-github-actions-tmp as 1.99.0" magewirephp/magewire-examples
 
       - name: Check webserver
-        run: curl -vvv http://localhost
+        run: curl -vvv http://localhost:8080
