--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           git checkout -b github-actions-tmp
           docker cp $(pwd) magento-project-community-edition:/data/extensions/
-          docker exec magento-project-community-edition composer require "magewirephp/magewire:dev-github-actions-tmp as 1.99.0" magewirephp/magewire-examples
+          docker exec magento-project-community-edition composer require --no-plugins --no-interaction "magewirephp/magewire:dev-github-actions-tmp as 1.99.0" magewirephp/magewire-examples
 
       - name: Check webserver
         run: curl -vvv http://localhost:8080
