--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -32,10 +32,9 @@ jobs:
 
       - name: Upload the code into the docker container
         run: |
-          git checkout -b github-actions-tmp
           docker cp $(pwd) magento-project-community-edition:/data/extensions/
-          docker exec magento-project-community-edition composer require --no-plugins --no-interaction magewirephp/magewire@dev as 1.99.0
-          docker exec magento-project-community-edition composer require --no-plugins --no-interaction magewirephp/magewire-examples
+          docker exec magento-project-community-edition composer require --no-plugins --no-interaction magewirephp/magewire:@dev
+          docker exec magento-project-community-edition composer require --no-plugins --no-interaction magewirephp/magewire-examples:@dev
 
       - name: Check webserver
         run: curl -vvv http://localhost:8080
