--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -28,6 +28,9 @@ jobs:
           docker exec magento-project-community-edition ./retry "composer require hyva-themes/magento2-default-theme"
           docker exec magento-project-community-edition ./retry "bin/magento setup:upgrade"
           
+          docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json"
+          docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json | jq -r '.[] | select(.code == "Hyva/default") | .id'"
+          docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json | jq -r '.[] | select(.code == "Hyva\/default") | .id'"
           THEME_ID=$(docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json | jq -r '.[] | select(.code == "Hyva/default") | .id'")
           echo "Hyvä has theme ID $THEME_ID"
           docker exec magento-project-community-edition ./retry "magerun2 config:store:set design/theme/theme_id $THEME_ID --scope=default --scope-id=0 && magerun2 config:store:set design/theme/theme_id $THEME_ID --scope=stores --scope-id=1"
