--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -32,14 +32,16 @@ jobs:
           cat .n98-magerun.yaml
           docker cp .n98-magerun.yaml magento-project-community-edition:/data/.n98-magerun.yaml
           
-          OUTPUT_THING=$(docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json")
+          OUTPUT_THING=$(docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json --skip-root-check")
+          docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json  | jq -r '.[] | select(.code == \"Hyva\\/default\") | .id'"
+          
           
           echo "OUTPUT $OUTPUT_THING OUTPUTEND"
-          docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json"
-          docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json | jq -r '.[] | select(.code == \"Hyva/default\") | .id'"
-          docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json | jq -r '.[] | select(.code == \"Hyva\\/default\") | .id'"
+          docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json --skip-root-check"
+          docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json --skip-root-check | jq -r '.[] | select(.code == \"Hyva/default\") | .id'"
+          docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json --skip-root-check | jq -r '.[] | select(.code == \"Hyva\\/default\") | .id'"
 
-          THEME_ID=$(docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json | jq -r '.[] | select(.code == "Hyva/default") | .id'")
+          THEME_ID=$(docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json --skip-root-check | jq -r '.[] | select(.code == "Hyva/default") | .id'")
           echo "Hyvä has theme ID $THEME_ID"
           docker exec magento-project-community-edition ./retry "magerun2 config:store:set design/theme/theme_id $THEME_ID --scope=default --scope-id=0 && magerun2 config:store:set design/theme/theme_id $THEME_ID --scope=stores --scope-id=1"
 
