--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -31,6 +31,7 @@ jobs:
           THEME_ID=$(docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json --skip-root-check | jq -r '.[] | select(.code == \"Hyva\\/default\") | .id'")
           echo "Hyvä has theme ID $THEME_ID"
           docker exec magento-project-community-edition ./retry "magerun2 config:store:set design/theme/theme_id 3 --scope=default --scope-id=0 && magerun2 config:store:set design/theme/theme_id $THEME_ID --scope=stores --scope-id=1"
+          docker exec magento-project-community-edition ./retry "bin/magento cache:flush"
 
       - name: Upload the code into the docker container
         run: |
