--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -42,3 +42,9 @@ jobs:
 
       - name: Check webserver
         run: curl --fail-with-body -vvv http://localhost:8080
+
+      - name: Run Playwright tests
+        uses: tests
+        with:
+            browser: chrome
+            config: baseUrl=http://localhost:8080,defaultCommandTimeout=60000
