--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -1,5 +1,9 @@
-name: Integration Tests
-on: [push, pull_request]
+name: Integration and Playwright Tests
+on:
+  push:
+    branches: [main, master]
+  pull_request:
+    branches: [main, master]
 
 jobs:
   build:
@@ -27,7 +31,7 @@ jobs:
           docker exec magento-project-community-edition ./retry "composer config repositories.hyva-themes/magento2-theme-module git git@gitlab.hyva.io:hyva-themes/magento2-theme-module.git && composer config repositories.hyva-themes/magento2-reset-theme git git@gitlab.hyva.io:hyva-themes/magento2-reset-theme.git && composer config repositories.hyva-themes/magento2-email-module git git@gitlab.hyva.io:hyva-themes/magento2-email-module.git && composer config repositories.hyva-themes/magento2-default-theme git git@gitlab.hyva.io:hyva-themes/magento2-default-theme.git"
           docker exec magento-project-community-edition ./retry "composer require hyva-themes/magento2-default-theme"
           docker exec magento-project-community-edition ./retry "bin/magento setup:upgrade"
-          
+
           HYVA_ID=$(docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json --skip-root-check | jq -r '.[] | select(.code == \"Hyva\\/default\") | .id'")
           echo "Hyvä has theme ID $HYVA_ID"
           docker exec magento-project-community-edition ./retry "magerun2 config:store:set design/theme/theme_id $HYVA_ID --scope=stores --scope-id=1"
@@ -43,17 +47,23 @@ jobs:
       - name: Check webserver
         run: curl --fail-with-body -vvv http://localhost:8080
 
+  test:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
       - name: Install dependencies
         run: npm ci
-
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
-
       - name: Run Playwright tests
         run: npx playwright test
       - uses: actions/upload-artifact@v3
         if: always()
         with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
