--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -1,8 +1,16 @@
 name: Integration and Playwright Tests
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+      - master
+  pull_request:
+    branches:
+      - main
+      - master
 
 jobs:
-  build:
+  integration-tests:
     strategy:
       matrix:
         include:
@@ -10,40 +18,41 @@ jobs:
             MAGENTO_VERSION: 2.4.6
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+        - name: Checkout code
+          uses: actions/checkout@v2
 
-      - name: Start Docker
-        run: docker run --detach -p 8080:80 --name magento-project-community-edition michielgerritsen/magento-project-community-edition:${{ matrix.PHP_VERSION }}-magento${{ matrix.MAGENTO_VERSION }}
+        - name: Start Docker
+          run: docker run --detach -p 8080:80 --name magento-project-community-edition michielgerritsen/magento-project-community-edition:${{ matrix.PHP_VERSION }}-magento${{ matrix.MAGENTO_VERSION }}
 
-      - name: Remove version from composer.json
-        run: sed -i '/version/d' ./composer.json
+        - name: Remove version from composer.json
+          run: sed -i '/version/d' ./composer.json
 
-      - name: Install Hyva
-        run: |
-          docker exec magento-project-community-edition sh -c "mkdir -p ~/.ssh/ && echo \"${{ secrets.SSH_PRIVATE_KEY }}\" > ~/.ssh/id_ed25519"
-          docker exec magento-project-community-edition sh -c "chmod 700 ~/.ssh && chmod 600 ~/.ssh/id_ed25519"
-          docker exec magento-project-community-edition sh -c "ssh-keyscan -t rsa gitlab.hyva.io >> ~/.ssh/known_hosts"
-          docker exec magento-project-community-edition ./retry "composer config repositories.hyva-themes/magento2-theme-module git git@gitlab.hyva.io:hyva-themes/magento2-theme-module.git && composer config repositories.hyva-themes/magento2-reset-theme git git@gitlab.hyva.io:hyva-themes/magento2-reset-theme.git && composer config repositories.hyva-themes/magento2-email-module git git@gitlab.hyva.io:hyva-themes/magento2-email-module.git && composer config repositories.hyva-themes/magento2-default-theme git git@gitlab.hyva.io:hyva-themes/magento2-default-theme.git"
-          docker exec magento-project-community-edition ./retry "composer require hyva-themes/magento2-default-theme"
-          docker exec magento-project-community-edition ./retry "bin/magento setup:upgrade"
+        - name: Install Hyva
+          run: |
+                docker exec magento-project-community-edition sh -c "mkdir -p ~/.ssh/ && echo \"${{ secrets.SSH_PRIVATE_KEY }}\" > ~/.ssh/id_ed25519"
+                docker exec magento-project-community-edition sh -c "chmod 700 ~/.ssh && chmod 600 ~/.ssh/id_ed25519"
+                docker exec magento-project-community-edition sh -c "ssh-keyscan -t rsa gitlab.hyva.io >> ~/.ssh/known_hosts"
+                docker exec magento-project-community-edition ./retry "composer config repositories.hyva-themes/magento2-theme-module git git@gitlab.hyva.io:hyva-themes/magento2-theme-module.git && composer config repositories.hyva-themes/magento2-reset-theme git git@gitlab.hyva.io:hyva-themes/magento2-reset-theme.git && composer config repositories.hyva-themes/magento2-email-module git git@gitlab.hyva.io:hyva-themes/magento2-email-module.git && composer config repositories.hyva-themes/magento2-default-theme git git@gitlab.hyva.io:hyva-themes/magento2-default-theme.git"
+                docker exec magento-project-community-edition ./retry "composer require hyva-themes/magento2-default-theme"
+                docker exec magento-project-community-edition ./retry "bin/magento setup:upgrade"
+                
+                HYVA_ID=$(docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json --skip-root-check | jq -r '.[] | select(.code == \"Hyva\\/default\") | .id'")
+                echo "Hyvä has theme ID $HYVA_ID"
+                docker exec magento-project-community-edition ./retry "magerun2 config:store:set design/theme/theme_id $HYVA_ID --scope=stores --scope-id=1"
+                docker exec magento-project-community-edition ./retry "bin/magento cache:flush"
 
-          HYVA_ID=$(docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json --skip-root-check | jq -r '.[] | select(.code == \"Hyva\\/default\") | .id'")
-          echo "Hyvä has theme ID $HYVA_ID"
-          docker exec magento-project-community-edition ./retry "magerun2 config:store:set design/theme/theme_id $HYVA_ID --scope=stores --scope-id=1"
-          docker exec magento-project-community-edition ./retry "bin/magento cache:flush"
+        - name: Upload the code into the docker container
+          run: |
+                docker cp $(pwd) magento-project-community-edition:/data/extensions/
+                docker exec magento-project-community-edition sh -c "jq '. + {replace: {\"magewirephp/magewire\": \"1.99.0\"}}' composer.json > temp.json && mv temp.json composer.json"
+                docker exec magento-project-community-edition composer require --no-plugins --no-interaction magewirephp/magewire:@dev
+                docker exec magento-project-community-edition composer require --no-plugins --no-interaction magewirephp/magewire-examples:@dev
 
-      - name: Upload the code into the docker container
-        run: |
-          docker cp $(pwd) magento-project-community-edition:/data/extensions/
-          docker exec magento-project-community-edition sh -c "jq '. + {replace: {\"magewirephp/magewire\": \"1.99.0\"}}' composer.json > temp.json && mv temp.json composer.json"
-          docker exec magento-project-community-edition composer require --no-plugins --no-interaction magewirephp/magewire:@dev
-          docker exec magento-project-community-edition composer require --no-plugins --no-interaction magewirephp/magewire-examples:@dev
+        - name: Check webserver
+          run: curl --fail-with-body -vvv http://localhost:8080
 
-      - name: Check webserver
-        run: curl --fail-with-body -vvv http://localhost:8080
-
-  test:
+  playwright-tests:
+    needs: integration-tests
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
