--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -1,13 +1,5 @@
 name: Integration and Playwright Tests
-on:
-  push:
-    branches:
-      - main
-      - master
-  pull_request:
-    branches:
-      - main
-      - master
+on: [push, pull_request]
 
 jobs:
   integration-tests:
