--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -48,17 +48,21 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: 18
+          node-version: 16
+
+      - name: Check out code
+        uses: actions/checkout@v2
+
       - name: Install dependencies
-        run: npm ci
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+        run: npm install
+
       - name: Run Playwright tests
         run: npx playwright test
-      - uses: actions/upload-artifact@v3
+
+      - uses: actions/upload-artifact@v2
         if: always()
         with:
           name: playwright-report
