--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -52,10 +52,10 @@ jobs:
           uses: actions/checkout@v2
 
         - name: Install dependencies
-          run: npm install
+          run: npm ci
 
-        - name: install playwright
-          run: npx playwright install
+        - name: Install Playwright Browsers
+          run: npx playwright install --with-deps
 
         - name: Run Playwright tests
           run: npx playwright test
