--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -43,6 +43,9 @@ jobs:
         - name: Check webserver
           run: curl --fail-with-body -vvv http://localhost:8080
 
+        - name: Setup upterm session
+          uses: lhotari/action-upterm@v1
+
         - name: Install Node.js
           uses: actions/setup-node@v3
           with:
