--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -31,6 +31,7 @@ jobs:
                 HYVA_ID=$(docker exec magento-project-community-edition sh -c "magerun2 dev:theme:list --format=json --skip-root-check | jq -r '.[] | select(.code == \"Hyva\\/default\") | .id'")
                 echo "Hyvä has theme ID $HYVA_ID"
                 docker exec magento-project-community-edition ./retry "magerun2 config:store:set design/theme/theme_id $HYVA_ID --scope=stores --scope-id=1"
+                docker exec magento-project-community-edition /bin/bash ./change-base-url http://localhost:8080/
                 docker exec magento-project-community-edition ./retry "bin/magento cache:flush"
 
         - name: Upload the code into the docker container
@@ -43,8 +44,8 @@ jobs:
         - name: Check webserver
           run: curl --fail-with-body -vvv http://localhost:8080
 
-        - name: Setup upterm session
-          uses: lhotari/action-upterm@v1
+#        - name: Setup upterm session
+#          uses: lhotari/action-upterm@v1
 
         - name: Install Node.js
           uses: actions/setup-node@v3
