--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -16,8 +16,9 @@ jobs:
         - name: Start Docker
           run: docker run --detach -p 8080:80 --name magento-project-community-edition michielgerritsen/magento-project-community-edition:${{ matrix.PHP_VERSION }}-magento${{ matrix.MAGENTO_VERSION }}
 
-        - name: Remove version from composer.json
-          run: sed -i '/version/d' ./composer.json
+        - name: Change the version in composer.json so we can install the examples
+          run: |
+            sed -i '' 's/"version": "[0-9]+\.[0-9]+\.[0-9]+"/"version": "1.99.0"/' composer.json
 
         - name: Install Hyvä & prepare Magento
           run: |
