--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -38,9 +38,7 @@ jobs:
         - name: Upload the code into the docker container
           run: |
                 docker cp $(pwd) magento-project-community-edition:/data/extensions/
-                docker exec magento-project-community-edition composer require --no-plugins --no-interaction magewirephp/magewire:@dev
-                docker exec magento-project-community-edition sh -c "jq '. + {replace: {\"magewirephp/magewire\": \"1.99.0\"}}' composer.json > temp.json && mv temp.json composer.json"
-                docker exec magento-project-community-edition composer require --no-plugins --no-interaction magewirephp/magewire-examples:@dev
+                docker exec magento-project-community-edition composer require --no-plugins --no-interaction magewirephp/magewire:@dev magewirephp/magewire-examples
                 docker exec magento-project-community-edition ./retry "bin/magento setup:upgrade"
                 docker exec magento-project-community-edition ./retry "bin/magento cache:flush"
 
