--- a/.github/workflows/end-2-end.yml
+++ b/.github/workflows/end-2-end.yml
@@ -63,7 +63,7 @@ jobs:
           run: npx playwright install --with-deps
 
         - name: Run Playwright tests
-          run: BASE_URL=https://127.0.0.1:8080/ npx playwright test
+          run: BASE_URL=http://localhost:8080/ npx playwright test
 
         - uses: actions/upload-artifact@v2
           if: always()
